# reil

./: BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  repositories.bzl
analysis/: BUILD.bazel  constants_analysis.cpp  constants_analysis.h  constants_analysis_test.cpp  dataflow.h  dataflow_test.cpp  edge_dependent_analysis.cpp  edge_dependent_analysis.h  edge_independent_analysis.cpp  edge_independent_analysis.h  instruction_graph.cpp  instruction_graph.h  map_storage.h  register_state.h  session.h  solver.h  solver_test.cpp  temporary_state.h
analysis/test_data/: asr_bug  asr_bug.asm  asr_bug.cfg  asr_bug.mem  control_flow_constraint  control_flow_constraint.asm  control_flow_constraint.cfg  control_flow_constraint.mem  literal_arithmetic.asm  literal_arithmetic.cfg  literal_arithmetic.mem  loop.asm  loop.cfg  loop.mem
analysis/value/: immediate.cpp  immediate.h  operations.h  top.cpp  top.h
control_flow_graph/: BUILD.bazel  control_flow_graph.cpp  control_flow_graph.h  control_flow_graph.proto  instruction_graph.cpp  instruction_graph.h
disassembler/: BUILD.bazel  disassembler.cpp  disassembler.h  first_pass_disassembler.cpp  first_pass_disassembler.h  first_pass_disassembler_test.cpp  function_scan.cpp  function_scan.h  function_scan_test.cpp  main.cpp  resolve_branches.cpp  resolve_branches_test.cpp
disassembler/aarch64/: disassemble.cpp  disassemble_test.cpp  disassembler.h  find_functions.cpp  find_functions_test.cpp
disassembler/test_data/: block_split.asm  block_split.memory_image  block_split_2  block_split_2.asm  block_split_2.mem  block_split_3  block_split_3.asm  block_split_3.mem  block_split_4  block_split_4.asm  block_split_4.mem  call_constant_register  call_constant_register.asm  call_constant_register.mem  jump_constant_register  jump_constant_register.asm  jump_constant_register.mem  simd_stp_prologue.asm  simd_stp_prologue.mem  simple.asm  simple.mem
flow_graph/: BUILD.bazel  control_flow_graph_test.cpp  edge.cpp  edge.h  flow_graph.cpp  flow_graph.h  instruction_provider.cpp  instruction_provider.h  native_edge.cpp  native_edge.h  native_flow_graph.cpp  native_flow_graph.h  native_flow_graph.proto  native_flow_graph_test.cpp  node.cpp  node.h
memory_image/: BUILD.bazel  memory_image.cpp  memory_image.h  memory_image.proto
reil/: BUILD.bazel  CMakeLists.txt  aarch64.h  emulator.cpp  emulator.h  immediate.cpp  immediate.h  immediate_test.cpp  interpreter.cpp  interpreter.h  reil.cpp  reil.h  translation.cpp  translation.h
reil/aarch64/: decoder.cpp  decoder.h  decoder_test.cpp  emulator.cpp  emulator.h  printer.cpp  translator.cpp  translator.h  translator_test.cpp
reil/test/: aarch64_decoder_test_generator.py  aarch64_fuzz.cpp  aarch64_libfuzzer.cpp  aarch64_test.cpp  aarch64_test_generator.py  aarch64_translator_test_generator.py  aarch64_unicorn_emulator.cpp  aarch64_unicorn_emulator.h  immediate_test.cpp
