# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   A static analysis framework using the REIL intermediate language

licenses(["notice"])  # Apache 2.0

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "analysis",
    hdrs = [
        "dataflow.h",
        "expression.h",
        "refcounted.h",
        "solver.h"
    ],
    srcs = [
        "dataflow.cpp",
        "expression.cpp",
    ],
    deps = [
        "//control_flow_graph:control_flow_graph",
        "//memory_image:memory_image",
        "//reil:reil",
        "@com_google_abseil//absl/types:span",
    ],
)

filegroup(
    name = "test_data",
    srcs = glob([
        "test_data/*.mem",
        "test_data/*.cfg",
    ]),
)

cc_test(
    name = "solver_test",
    srcs = [
        "solver_test.cpp",
    ],
    data = [
        ":test_data",
    ],
    deps = [
        ":analysis",
        "//disassembler:disassembler",
        "@com_google_googletest//:gtest",
    ],
    size = "small",
)

cc_test(
    name = "dataflow_test",
    srcs = [
        "dataflow_test.cpp",
    ],
    data = [
        ":test_data",
    ],
    deps = [
        ":analysis",
        "//disassembler:disassembler",
        "@com_google_googletest//:gtest",
    ],
    size = "small",
)