# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   A static analysis framework using the REIL intermediate language

licenses(["notice"])  # Apache 2.0

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "constants_analysis",
    hdrs = [
        "constants_analysis.h",
        "session.h",
    ],
    srcs = [
        "constants_analysis.cpp",
    ],
    deps = [
        "//flow_graph",
        "//memory_image",
        "//reil",
        "@com_google_abseil//absl/memory",
    ],
)

cc_test(
    name = "constants_analysis_test",
    srcs = [
        "constants_analysis_test.cpp",
    ],
    data = [
        ":test_data",
    ],
    deps = [
        ":constants_analysis",
        "@com_google_googletest//:gtest",
    ],
    size = "small",
)

filegroup(
    name = "test_data",
    srcs = glob([
        "test_data/*.mem",
        "test_data/*.cfg",
    ]),
)