# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   A disassembler/control flow recovery tool using the REIL translator.

licenses(["notice"])  # Apache 2.0

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "disassembler",
    srcs = [
        "aarch64/disassemble.cpp",
        "aarch64/find_functions.cpp",

        "disassembler.cpp",
        "resolve_branches.cpp",
    ],
    hdrs = [
        "aarch64/disassembler.h",
        "disassembler.h",
    ],
    deps = [
        "//flow_graph:flow_graph",
        "//flow_graph:native_flow_graph",
        "//memory_image:memory_image",
        "//analysis:constants_analysis",
        "//reil:reil",
        "@com_google_glog//:glog",
    ],
)

cc_binary(
    name = "disasm",
    srcs = [
        "main.cpp",
    ],
    deps = [
        ":disassembler",
    ],
)

filegroup(
    name = "test_data",
    srcs = glob([
        "test_data/*.mem",
    ]),
)

cc_test(
    name = "aarch64_find_functions_test",
    srcs = [
        "aarch64/find_functions_test.cpp",
    ],
    data = [
        ":test_data",
    ],
    deps = [
        ":disassembler",
        "@com_google_googletest//:gtest",
    ],
    size = "small",
)

cc_test(
    name = "aarch64_disassemble_test",
    srcs = [
        "aarch64/disassemble_test.cpp",
    ],
    data = [
        ":test_data",
    ],
    deps = [
        ":disassembler",
        "@com_google_googletest//:gtest",
    ],
    size = "small",
)

cc_test(
    name = "resolve_branches_test",
    srcs = [
        "resolve_branches_test.cpp",
    ],
    data = [
        ":test_data",
    ],
    deps = [
        ":disassembler",
        "@com_google_googletest//:gtest",
    ],
    size = "small",
)