# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache 2.0

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "native_flow_graph_proto",
    srcs = [
        "native_flow_graph.proto",
    ],
)

cc_proto_library(
    name = "native_flow_graph_cc_proto",
    deps = [":native_flow_graph_proto"]
)

cc_library(
    name = "native_flow_graph",
    srcs = [
        "native_edge.cpp",
        "native_flow_graph.cpp",
    ],
    hdrs = [
        "native_edge.h",
        "native_flow_graph.h",
    ],
    deps = [
        ":native_flow_graph_cc_proto",
        "//memory_image",
        "//reil",
        "@com_google_abseil//absl/memory",
        "@com_google_binexport//:binexport2_cc_proto",
        "@com_google_glog//:glog"  
    ]
)

cc_library(
    name = "flow_graph",
    srcs = [
        "edge.cpp",
        "flow_graph.cpp",
        "instruction_provider.cpp",
        "node.cpp",
    ],
    hdrs = [
        "edge.h",
        "flow_graph.h",
        "instruction_provider.h",
        "node.h",
    ],
    deps = [
        ":native_flow_graph",
        "//memory_image",
        "//reil",
        "@com_google_abseil//absl/memory",
        "@com_google_glog//:glog"
    ],
)

cc_test(
    name = "native_flow_graph_test",
    srcs = [
        "native_flow_graph_test.cpp",
    ],
    #data = [
    #    ":test_data",
    #],
    deps = [
        ":native_flow_graph",
        "@com_google_googletest//:gtest",
    ],
    size = "small",
)