# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   A c++ translation/emulation library for the aarch64 instruction set to REIL.

licenses(["notice"])  # Apache 2.0

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "reil_core",
    srcs = [
        "aarch64/decoder.cpp",
        "aarch64/emulator.cpp",
        "aarch64/printer.cpp",
        "aarch64/translator.cpp",
        "emulator.cpp",
        "immediate.cpp",
        "interpreter.cpp",
        "reil.cpp",
        "translation.cpp",
    ],
    hdrs = [
        "aarch64.h",
        "aarch64/decoder.h",
        "aarch64/emulator.h",
        "aarch64/translator.h",
        "emulator.h",
        "immediate.h",
        "interpreter.h",
        "reil.h",
        "translation.h",
    ],
    deps = [
        "@com_google_abseil//absl/types:variant",
    ],
)

cc_library(
    name = "reil_aarch64",
    srcs = [
        "aarch64/decoder.cpp",
        "aarch64/emulator.cpp",
        "aarch64/printer.cpp",
        "aarch64/translator.cpp",
    ],
    hdrs = [
        "aarch64.h",
        "aarch64/decoder.h",
        "aarch64/emulator.h",
        "aarch64/translator.h",
    ],
    deps = [
        ":reil_core",
        "@com_google_abseil//absl/types:variant",
    ],
)

cc_library(
    name = "reil",
    deps = [
        ":reil_core",
        ":reil_aarch64",
    ]
)

cc_test(
    name = "aarch64_test",
    size = "small",
    srcs = [
        "test/aarch64_test.cpp",
    ],
    deps = [
        ":reil_core",
        ":reil_aarch64",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "immediate_test",
    size = "small",
    srcs = [
        "test/immediate_test.cpp",
    ],
    deps = [
        ":reil_core",
        "@com_google_googletest//:gtest",
    ],
)